--- a/front-end/styles.css
+++ b/front-end/styles.css
@@ -1,61 +1,98 @@
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
 
-  /* 팝업 스타일 */
+
+form {
+  width: 50%;  /* form 요소의 너비를 50%로 설정 */
+  margin: 20px auto;  /* 위쪽과 아래쪽 마진을 20px, 좌측과 우측 마진을 자동으로 설정하여 가운데 정렬 */
+  transform: translateY(-200px); 
+  margin: 0 auto;  /* #map 요소를 화면 가운데에 배치 */
+}
+
+/* 팝업 스타일 */
 .content {
-    position: static;
-    display: flex;
-    font-size: 14px;
-    box-shadow: 5px 5px 5px #00000040;
-    border-radius: 10px;
-    flex-direction: column;
-    top: 180px;
-    left :800px;
-     width :300px; 
-     background-color:#FFFFFF; 
-     padding:5px; 
+  position: static;
+  display: flex;
+  font-size: 14px;
+  box-shadow: 5px 5px 5px #00000040;
+  border-radius: 10px;
+  flex-direction: column;
+  top: 180px;
+  left :800px;
+   width :300px; 
+   background-color:#FFFFFF; 
+   padding:5px; 
+}
+
+.img-box {
+   position:relative; 
+   width:100%; 
+   height:90px; 
+   border-radius:10px; 
+   background:#f5f5f5 url() no-repeat center;  
+   background-size: cover;
   }
-  
-  .img-box {
-     position:relative; 
-     width:100%; 
-     height:90px; 
-     border-radius:10px; 
-     background:#f5f5f5 url() no-repeat center;  
-     background-size: cover;
-    }
-  /* https://upload.wikimedia.org/wikipedia/commons/b/b7/Jungangno_Station_%28Daegu%29_20221125_002.jpg */
-  
-  .btn-close {
-      position:absolute;  
-      top :10 px ;
-      right :10 px ;
-      display:block ;
-      width :15 px ;  
-      height :15 px ;   
-      background:url() no-repeat center ;
-      background-size: cover;
-  }
-  
-  .info-box{
-       padding :10 px ;   
-  }
-  
-  .tit{
-        font-size :16 px ;  
-        font-weight:bold ;
-   }
-  
-  .link{
-         color:#3D6DCC ;   
-         font-size :13 px ;   
-         float:right ;    
-   }
-  
-  .new-addr{
-          margin-bottom :7 px ;    
-          overflow:hidden ;
-   }
-  .old-addr{
-           color:#707070 ;
-  
-  }
-  /* 팝업 스타일 끝 */
+/* https://upload.wikimedia.org/wikipedia/commons/b/b7/Jungangno_Station_%28Daegu%29_20221125_002.jpg */
+
+.btn-close {
+    position:absolute;  
+    top :10 px ;
+    right :10 px ;
+    display:block ;
+    width :15 px ;  
+    height :15 px ;   
+    background:url() no-repeat center ;
+    background-size: cover;
+}
+
+.info-box{
+     padding :10 px ;   
+}
+
+.tit{
+      font-size :16 px ;  
+      font-weight:bold ;
+ }
+
+.link{
+       color:#3D6DCC ;   
+       font-size :13 px ;   
+       float:right ;    
+ }
+
+.new-addr{
+        margin-bottom :7 px ;    
+        overflow:hidden ;
+ }
+.old-addr{
+         color:#707070 ;
+
+}
+/* 팝업 스타일 끝 */
+
+/* 검색창 디자인 */
+#searchBox {
+padding: 10px;
+font-size: 16px;
+border-radius: 5px;
+border: 1px solid #ccc;
+}
+
+#searchButton {
+padding: 10px;
+font-size: 16px;
+background-color: #4CAF50; 
+color: white; 
+border-radius: 5px; 
+border:none; 
+}
+
+#searchButton:hover {
+background-color:#45a049;
+}
+/* 검색창 디자인 끝 */
+
